--- a/src/agentscope/studio/static/html-drag-components/tool-post.html
+++ b/src/agentscope/studio/static/html-drag-components/tool-post.html
@@ -10,7 +10,7 @@
     <span class="toggle-arrow">&#x25B2;</span>
 </div>
 <div class="box">
-    <div class="readme" i18n="tool-post-readme">Post Configurations</div>
+    <div class="readme" i18n="tool-post-readme">Post a request and return the response</div>
     <br>
     <label> url </label>
     <input type="text" df-args-url placeholder=""
