--- a/src/agentscope/studio/static/html-drag-components/tool-image-composition.html
+++ b/src/agentscope/studio/static/html-drag-components/tool-image-composition.html
@@ -10,7 +10,7 @@
     <span class="toggle-arrow">&#x25B2;</span>
 </div>
 <div class="box">
-    <div class="readme" i18n="tool-image-composition-readme">Image composition Configurations</div>
+    <div class="readme" i18n="tool-image-composition-readme">Composite images into one image</div>
     <br>
     <label i18n="tool-image-composition-Titles"> Titles </label>
     <textarea type="text" df-args-titles placeholder="['Title 1', 'Title 2', ... ]"
