--- a/src/agentscope/studio/static/html-drag-components/tool-video-composition.html
+++ b/src/agentscope/studio/static/html-drag-components/tool-video-composition.html
@@ -10,7 +10,7 @@
     <span class="toggle-arrow">&#x25B2;</span>
 </div>
 <div class="box">
-    <div class="readme" i18n="tool-video-composition-readme">Video composition Configurations</div>
+    <div class="readme" i18n="tool-video-composition-readme">Composite videos into one video</div>
     <br>
 
     <label i18n="tool-video-composition-outputPath"> Output path </label>
