--- a/src/agentscope/studio/static/html-drag-components/tool-code.html
+++ b/src/agentscope/studio/static/html-drag-components/tool-code.html
@@ -10,8 +10,12 @@
     <span class="toggle-arrow">&#x25B2;</span>
 </div>
 <div class="box">
-    <div class="readme">Execute Python Code
+    <div class="readme">
+        <span i18n="tool-code-readme">Execute Python Code</span>
+        <div i18n="tool-code-note">Note:</div>
+        <div i18n="tool-code-note-func">- Please do not modify the function name.</div>
+        <div i18n="tool-code-note-var">- Input and Output variables must be a Msg or dict object.</div>
     </div>
-    <label>Code</label>
+    <label i18n="tool-code-content">Code</label>
     <div class="code-content" data-id="code-content" df-args-code></div>
 </div>
